check and modify curries-es6; add new views on APP with class: login|register, home, profile, posts|new-posts

--- a/staff/abel-prieto/FRONTEND/APP.9/index.html
+++ b/staff/abel-prieto/FRONTEND/APP.9/index.html
@@ -5,20 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <script src="pollyfills.js" defer></script>
+    <script src="polyfills.js"></script>
 
     <script src="data.js" defer></script>
 
     <script src="validator.js" defer></script>
     <script src="logic.js" defer></script>
     
-    <script src="views/Component.js"></script>
-    <script src="views/LoginView.js" defer></script>
-    <script src="views/RegisterView.js" defer></script>
-    <script src="views/ProfileView.js" defer></script>
-    <script src="views/PostsView.js" defer></script>
-    <script src="views/NewPostView.js" defer></script>
-    <script src="views/HomeView.js" defer></script>
+    <script src="views/login.js" defer></script>
+    <script src="views/register.js" defer></script>
+    <script src="views/home.js" defer></script>
     <script src="main.js" defer></script>
 
     <link rel="stylesheet" href="style.css">
