--- a/staff/abel-prieto/FRONTEND/CURRIES-ES6/index_curries.html
+++ b/staff/abel-prieto/FRONTEND/CURRIES-ES6/index_curries.html
@@ -22,6 +22,6 @@
     <script src="Curry.prototype.pop.spec.js"></script>
     <script src="Curry.prototype.push.spec.js"></script>
     <script src="Curry.prototype.slice.spec.js"></script>
-    <!-- <script src="Curry.prototype.splice.spec.js"></script> -->
+    <script src="Curry.prototype.splice.spec.js"></script>
 </body>
 </html>
