componetize register, home, profile, posts and new posts views

--- a/staff/anna-cuenca/frontend/app.4/index.html
+++ b/staff/anna-cuenca/frontend/app.4/index.html
@@ -58,10 +58,8 @@
             <form id="change-email-form" class="form">
                 <label for="new-email-input">New e-mail</label>
                 <input id="new-email-input" type="email">
-
                 <label for="new-email-confirm-input">Confirm new e-mail</label>
                 <input id="new-email-confirm-input" type="email">
-
                 <label for="password-input">Password</label>
                 <input type="password" id="password-input">
 
@@ -122,14 +120,10 @@
     <script src="logic.js"></script>
 
     
-    <script src="views/Component.js"></script>
-    <script src="views/LoginView.js"></script>
-    <script src="views/RegisterView.js"></script>
-    <script src="views/ProfileView.js"></script>
-    <script src="views/PostsView.js"></script>
-    <script src="views/NewPostView.js"></script>
-    <script src="views/HomeView.js"></script>
-
+    <script src="views/login.js"></script>
+    
+    <script src="views/register.js"></script>
+    <script src="views/home.js"></script>
     <script src="main.js"></script>
 </body>
 
