add app versions 12,13,14,15,16 and 17

--- a/staff/ana-delrio/frontend/curries-es6/index.html
+++ b/staff/ana-delrio/frontend/curries-es6/index.html
@@ -10,6 +10,7 @@
 <body>
     <script src="Curry.js"></script>
 
+    <!-- cargo mi herramienta de testeo -->
     <script src="pepetest.js"></script>
 
     <script src="Curry.constructor.spec.js"></script>
