--- a/staff/ana-delrio/frontend/app.12/index.html
+++ b/staff/ana-delrio/frontend/app.12/index.html
@@ -5,15 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>App</title>
-    <link rel="shortcut icon" href="https://www.b00tc4mp.com/favicon.ico" type="image/x-icon">
+
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <div id="register-view" class="view">
+    <div id="register-view">
         <h1>Register</h1>
 
-        <form class="form">
+        <form class="register-form">
             <label for="name-input">Name</label>
             <input id="name-input" type="text">
 
@@ -29,10 +29,10 @@
         <a href="">Login</a>
     </div>
 
-    <div id="login-view" class="view">
+    <div id="login-view">
         <h1>Login</h1>
 
-        <form class="form">
+        <form class="login-form">
             <label for="email-input">E-mail</label>
             <input id="email-input" type="email">
 
@@ -58,10 +58,10 @@
             </div>
         </header>
 
-        <div id="profile-view" class="view">
+        <div id="profile-view">
             <h2>Update e-mail</h2>
 
-            <form id="change-email-form" class="form">
+            <form id="change-email-form">
                 <label for="new-email-input">New e-mail</label>
                 <input id="new-email-input" type="email">
 
@@ -76,7 +76,7 @@
 
             <h2>Update password</h2>
 
-            <form id="change-password-form" class="form">
+            <form id="change-password-form">
                 <label for="password-input">Current password</label>
                 <input type="password" id="password-input">
 
@@ -90,10 +90,10 @@
             </form>
         </div>
 
-        <div id="new-post-view" class="view">
+        <div id="new-post-view">
             <h2>New post</h2>
 
-            <form id="new-post-form" class="form">
+            <form id="new-post-form">
                 <label for="image-input">Image</label>
                 <input type="url" id="image-input">
 
@@ -116,14 +116,10 @@
     <script src="validators.js"></script>
     <script src="logic.js"></script>
 
-    <script src="views/Component.js"></script>
-    <script src="views/LoginView.js"></script>
-    <script src="views/RegisterView.js"></script>
-    <script src="views/ProfileView.js"></script>
-    <script src="views/PostsView.js"></script>
-    <script src="views/NewPostView.js"></script>
-    <script src="views/HomeView.js"></script>
     <script src="main.js"></script>
+    <script src="views/login.js"></script>
+    <script src="views/register.js"></script>
+    <script src="views/home.js"></script>
 </body>
 
 </html>
