add field data (db|managers & models); modify logic and functions

--- a/staff/abel-prieto/FRONTEND/APP/index.html
+++ b/staff/abel-prieto/FRONTEND/APP/index.html
@@ -7,7 +7,9 @@
 
     <script src="pollyfills.js" defer></script>
 
-    <script src="data.js" defer></script>
+    <script src="data/models.js" defer></script>
+    <script src="data/db.js" defer></script>
+    <script src="data/managers.js" defer></script>
 
     <script src="validator.js" defer></script>
     <script src="logic.js" defer></script>
