update last app version

--- a/staff/belen-ivars/frontend/app/index.html
+++ b/staff/belen-ivars/frontend/app/index.html
@@ -110,7 +110,10 @@
 
     <script src="polyfills.js"></script>
 
-    <script src="data.js"></script>
+    <script src="data/models.js"></script>
+    <script src="data/db.js"></script>
+    <script src="data/managers.js"></script>
+
 
     <script src="validators.js"></script>
     <script src="logic.js"></script>
