refactor data layer and update logic and view consequently

--- a/staff/isabel-dominguez/frontend/curries-es6.js/index.html
+++ b/staff/isabel-dominguez/frontend/curries-es6.js/index.html
@@ -15,7 +15,7 @@
 
     <script src="Curry.prototype.at.spec.js"></script>
 
-    <!-- <script src="Curry.prototype.concat.spec.js"></script>
+    <script src="Curry.prototype.concat.spec.js"></script>
 
     <script src="Curry.prototype.filter.spec.js"></script>
 
@@ -37,7 +37,7 @@
 
     <script src="Curry.prototype.splice.spec.js"></script>
 
-    <script src="Curry.prototype.reverse.spec.js"></script> -->
+    <script src="Curry.prototype.reverse.spec.js"></script>
 </body>
 
 </html>
