add APP versions (0.1|0.2 & 0.3) with React

--- a/staff/abel-prieto/FRONTEND/APP/REACT/APP.3/index.html
+++ b/staff/abel-prieto/FRONTEND/APP/REACT/APP.3/index.html
@@ -29,7 +29,8 @@
     <script src="validator.js" defer></script>
     <script src="logic.js" defer></script>
 
-    <script src="main.js" defer></script>
+    <script src="main.jsx" type="text/babel" defer></script>
+    <!--Ponemos el type='text-babel' para que el compilador de código babel actue sobre el main.jsx-->
 
 </body>
 </html>
