--- a/staff/abel-prieto/FRONTEND/APP/REACT/APP.4/index.html
+++ b/staff/abel-prieto/FRONTEND/APP/REACT/APP.4/index.html
@@ -29,6 +29,11 @@
     <script src="validator.js" defer></script>
     <script src="logic.js" defer></script>
 
+    <script src="views/Login.jsx" type="text/babel" defer></script>
+    <script src="views/Register.jsx" type="text/babel" defer></script>
+    <script src="views/Home.jsx" type="text/babel" defer></script>
+    <script src="App.jsx" type="text/babel" defer></script>
+
     <script src="main.jsx" type="text/babel" defer></script>
     <!--Ponemos el type='text-babel' para que el compilador de código babel actue sobre el main.jsx-->
 
