--- a/staff/ana-delrio/frontend/app.21/index.html
+++ b/staff/ana-delrio/frontend/app.21/index.html
@@ -14,6 +14,7 @@
 
     <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+    <!-- trasncribe el código -->
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 
     <script src="polyfills.js"></script>
@@ -25,10 +26,7 @@
     <script src="validators.js"></script>
     <script src="logic.js"></script>
 
-    <script src="views/Login.jsx" type="text/babel"></script>
-    <script src="views/Register.jsx" type="text/babel"></script>
-    <script src="views/Home.jsx" type="text/babel"></script>
-    <script src="App.jsx" type="text/babel"></script>
+    <!-- Importante añadir jsx -->
     <script src="main.jsx" type="text/babel"></script>
 </body>
 
