--- a/staff/isabel-dominguez/frontend/app/index.html
+++ b/staff/isabel-dominguez/frontend/app/index.html
@@ -10,104 +10,13 @@
 </head>
 
 <body>
-    <div id="register-view" class="view">
-        <h1>Register</h1>
+    <div id="root"></div> <!-- Es una SPA  -->
 
-        <form class="form">
-            <label for="name-input">Name</label>
-            <input id="name-input" type="text">
-
-            <label for="email-input">E-mail</label>
-            <input id="email-input" type="email">
-
-            <label for="password-input">Password</label>
-            <input type="password" id="password-input">
-
-            <button type="submit">Register</button>
-        </form>
-
-        <a href="">Login</a>
-    </div>
-
-    <div id="login-view" class="view">
-        <h1>Login</h1>
-
-        <form class="form">
-            <label for="email-input">E-mail</label>
-            <input id="email-input" type="email">
-
-            <label for="password-input">Password</label>
-            <input type="password" id="password-input">
-
-            <button type="submit">Login</button>
-        </form>
-
-        <a href="">Register</a>
-    </div>
-
-    <div id="home-view">
-        <header class="home-header">
-            <h1><a href="" id="home-link">Home</a></h1>
-
-            <div>
-                <button id="new-post-button">+</button>
-
-                <a href="" class="profile-link" id="profile-link">Profile</a>
-
-                <button id="logout-button">Logout</button>
-            </div>
-        </header>
-
-        <div id="profile-view" class="view">
-            <h2>Update e-mail</h2>
-
-            <form id="change-email-form" class="form">
-                <label for="new-email-input">New e-mail</label>
-                <input id="new-email-input" type="email">
-
-                <label for="new-email-confirm-input">Confirm new e-mail</label>
-                <input id="new-email-confirm-input" type="email">
-
-                <label for="password-input">Password</label>
-                <input type="password" id="password-input">
-
-                <button type="submit">Update e-mail</button>
-            </form>
-
-            <h2>Update password</h2>
-
-            <form id="change-password-form" class="form">
-                <label for="password-input">Current password</label>
-                <input type="password" id="password-input">
-
-                <label for="new-password-input">New password</label>
-                <input id="new-password-input" type="password">
-
-                <label for="new-password-confirm-input">Confirm new password</label>
-                <input id="new-password-confirm-input" type="password">
-
-                <button type="submit">Update password</button>
-            </form>
-        </div>
-
-        <div id="new-post-view" class="view">
-            <h2>New post</h2>
-
-            <form id="new-post-form" class="form">
-                <label for="image-input">Image</label>
-                <input type="url" id="image-input">
-
-                <label for="text-input">Text</label>
-                <input type="text" id="text-input">
-
-                <button type="submit">Post</button>
-                <button id="cancel-new-post-button">Cancel</button>
-            </form>
-        </div>
-
-        <div id="posts-view">
-        </div>
-    </div>
+    <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
+    <!-- Virtual DOM de React, el núcleo  -->
+    <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+    <!-- Lo conecta con el DOM real  -->
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 
     <script src="polyfills.js"></script>
 
@@ -118,14 +27,7 @@
     <script src="validators.js"></script>
     <script src="logic.js"></script>
 
-    <script src="views/Component.js"></script>
-    <script src="views/LoginView.js"></script>
-    <script src="views/RegisterView.js"></script>
-    <script src="views/ProfileView.js"></script>
-    <script src="views/PostsView.js"></script>
-    <script src="views/NewPostView.js"></script>
-    <script src="views/HomeView.js"></script>
-    <script src="main.js"></script>
+    <script src="main.jsx" type="text/babel"></script>
 </body>
 
 </html>
