--- a/staff/isabel-dominguez/frontend/app/index.html
+++ b/staff/isabel-dominguez/frontend/app/index.html
@@ -27,6 +27,10 @@
     <script src="validators.js"></script>
     <script src="logic.js"></script>
 
+    <script src="views/Login.jsx" type="text/babel"></script>
+    <script src="views/Register.jsx" type="text/babel"></script>
+    <script src="views/Home.jsx" type="text/babel"></script>
+    <script src="App.jsx" type="text/babel"></script>
     <script src="main.jsx" type="text/babel"></script>
 </body>
 
