--- a/staff/abel-prieto/FRONTEND/APP/REACT/APP.7/index.html
+++ b/staff/abel-prieto/FRONTEND/APP/REACT/APP.7/index.html
@@ -23,8 +23,8 @@
     <script src="pollyfills.js" defer></script>
 
     <script src="data/models.js" defer></script>
+    <script src="data/collections.js" defer></script>
     <script src="data/db.js" defer></script>
-    <script src="data/managers.js" defer></script>
 
     <script src="validator.js" defer></script>
     <script src="logic.js" defer></script>
