--- a/staff/isabel-dominguez/frontend/app.12-beforeCollection/index.html
+++ b/staff/isabel-dominguez/frontend/app.12-beforeCollection/index.html
@@ -21,8 +21,8 @@
     <script src="polyfills.js"></script>
 
     <script src="data/models.js"></script>
-    <script src="data/Collections.js"></script>
     <script src="data/db.js"></script>
+    <script src="data/managers.js"></script>
 
     <script src="validators.js"></script>
     <script src="logic.js"></script>
