--- a/staff/eneko-fernandez/frontend/app_clase/index.html
+++ b/staff/eneko-fernandez/frontend/app_clase/index.html
@@ -1,126 +1,38 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>App</title>
-        <link rel="shortcut icon" href="https://www.b00tc4mp.com/favicon.ico"
-            type="image/x-icon">
         <link rel="stylesheet" href="style.css">
+        <title>React-App</title>
     </head>
 
     <body>
-        <div id="register-view" class="view">
-            <h1>Register</h1>
 
-            <form class="form">
-                <label for="name-input">Name</label>
-                <input id="name-input" type="text">
+        <div id="root"></div>
 
-                <label for="email-input">E-mail</label>
-                <input id="email-input" type="email">
+        <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
+        <script
+            src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
 
-                <label for="password-input">Password</label>
-                <input type="password" id="password-input">
+        <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 
-                <button type="submit">Register</button>
-            </form>
+        <script src="polyfills.js" defer></script>
 
-            <a href>Login</a>
-        </div>
+        <script src="data/models.js" defer></script>
+        <script src="data/collections.js" defer></script>
+        <script src="data/db.js" defer></script>
 
-        <div id="login-view" class="view">
-            <h1>Login</h1>
+        <script src="validators.js" defer></script>
+        <script src="logic.js" defer></script>
 
-            <form class="form">
-                <label for="email-input">E-mail</label>
-                <input id="email-input" type="email">
+        <script src="views/Login.jsx" type="text/babel" defer></script>
+        <script src="views/Register.jsx" type="text/babel" defer></script>
+        <script src="views/Home.jsx" type="text/babel" defer></script>
+        <script src="App.jsx" type="text/babel" defer></script>
 
-                <label for="password-input">Password</label>
-                <input type="password" id="password-input">
+        <script src="main.jsx" type="text/babel" defer></script>
 
-                <button type="submit">Login</button>
-            </form>
-
-            <a href>Register</a>
-        </div>
-
-        <div id="home-view">
-            <header class="home-header">
-                <h1><a href id="home-link">Home</a></h1>
-
-                <div>
-                    <button id="new-post-button">+</button>
-
-                    <a href class="profile-link" id="profile-link">Profile</a>
-
-                    <button id="logout-button">Logout</button>
-                </div>
-            </header>
-
-            <div id="profile-view" class="view">
-                <h2>Update e-mail</h2>
-
-                <form id="change-email-form" class="form">
-                    <label for="new-email-input">New e-mail</label>
-                    <input id="new-email-input" type="email">
-
-                    <label for="new-email-confirm-input">Confirm new e-mail</label>
-                    <input id="new-email-confirm-input" type="email">
-
-                    <label for="password-input">Password</label>
-                    <input type="password" id="password-input">
-
-                    <button type="submit">Update e-mail</button>
-                </form>
-
-                <h2>Update password</h2>
-
-                <form id="change-password-form" class="form">
-                    <label for="password-input">Current password</label>
-                    <input type="password" id="password-input">
-
-                    <label for="new-password-input">New password</label>
-                    <input id="new-password-input" type="password">
-
-                    <label for="new-password-confirm-input">Confirm new password</label>
-                    <input id="new-password-confirm-input" type="password">
-
-                    <button type="submit">Update password</button>
-                </form>
-            </div>
-
-            <div id="new-post-view" class="view">
-                <h2>New post</h2>
-
-                <form id="new-post-form" class="form">
-                    <label for="image-input">Image</label>
-                    <input type="url" id="image-input">
-
-                    <label for="text-input">Text</label>
-                    <input type="text" id="text-input">
-
-                    <button type="submit">Post</button>
-                    <button id="cancel-new-post-button">Cancel</button>
-                </form>
-            </div>
-
-            <div id="posts-view">
-            </div>
-        </div>
-
-        <script src="polyfills.js"></script>
-
-        <script src="data.js"></script>
-
-        <script src="validators.js"></script>
-        <script src="logic.js"></script>
-
-        <script src="views/login.js"></script>
-        <script src="main.js"></script>
-        <script src="views/register.js"></script>
-        <script src="views/home.js"></script>
     </body>
-
 </html>
