--- a/staff/ana-delrio/frontend/app.27(Delete Button)/index.html
+++ b/staff/ana-delrio/frontend/app.27(Delete Button)/index.html
@@ -19,8 +19,8 @@
     <script src="polyfills.js"></script>
 
     <script src="data/models.js"></script>
-    <script src="data/collections.js"></script>
     <script src="data/db.js"></script>
+    <script src="data/managers.js"></script>
 
     <script src="validators.js"></script>
     <script src="logic.js"></script>
