--- a/staff/belen-ivars/frontend/app/index.html
+++ b/staff/belen-ivars/frontend/app/index.html
@@ -16,7 +16,10 @@
     <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 
-    <script src="polyfills.js"></script>
+    <script src="utils.js/syncDelay.js"></script>
+    <script src="utils.js/asyncDelay.js"></script>
+    <script src="utils.js/polyfills.js"></script>
+
 
     <script src="data/models.js"></script>
     <script src="data/collections.js"></script>
