--- a/staff/luis-felipe-garcia/frontend-manu-literal/versiones/app.favList_opc1/index.html
+++ b/staff/luis-felipe-garcia/frontend-manu-literal/versiones/app.favList_opc1/index.html
@@ -16,9 +16,7 @@
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 
 
-    <script src="utils/asyncDelay.js"></script>
-    <script src="utils/syncDelay.js"></script>
-    <script src="utils/polyfills.js"></script>
+    <script src="polyfills.js"></script>
 
     <script src="data/models.js"></script>
     <script src="data/collections.js"></script>
