--- a/staff/isabel-dominguez/frontend/app.17/index.html
+++ b/staff/isabel-dominguez/frontend/app.17/index.html
@@ -18,10 +18,12 @@
     <!-- Lo conecta con el DOM real  -->
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 
-    <script src="polyfills.js"></script>
+    <script src="utils/syncDelay.js"></script>
+    <script src="utils/asyncDelay.js"></script>
+    <script src="utils/polyfills.js"></script>
 
     <script src="data/models.js"></script>
-    <script src="data/Collections.js"></script>
+    <script src="data/collections.js"></script>
     <script src="data/db.js"></script>
 
     <script src="validators.js"></script>
