--- a/staff/luis-felipe-garcia/frontend-manu-literal/app/index.html
+++ b/staff/luis-felipe-garcia/frontend-manu-literal/app/index.html
@@ -1,38 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>App</title>
-    <link rel="shortcut icon" href="https://www.b00tc4mp.com/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="style.css">
-</head>
-
-<body>
+  </head>
+  <body>
     <div id="root"></div>
-    <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
-    <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
-    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-
-
-    <script src="utils/asyncDelay.js"></script>
-    <script src="utils/syncDelay.js"></script>
-    <script src="utils/polyfills.js"></script>
-
-    <script src="data/models.js"></script>
-    <script src="data/collections.js"></script>
-    <script src="data/db.js"></script>
-
-    <script src="validators.js"></script>
-    <script src="logic.js"></script>
-
-    <script src="views/Login.jsx" type="text/jsx"></script>
-    <script src="views/Register.jsx" type="text/jsx"></script>
-    <script src="views/Home.jsx" type="text/jsx"></script>
-    <script src="App.jsx" type="text/jsx"></script>
-
-    <script src="main.jsx" type="text/jsx"></script>
-</body>
-
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
