--- a/staff/abel-prieto/PROYECT/HiInit/index.html
+++ b/staff/abel-prieto/PROYECT/HiInit/index.html
@@ -3,9 +3,9 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/png" href="/assets/terminal.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>HiInit v0.0.01</title>
+  <title>HiInit Web | Home</title>
 </head>
 
 <body>
