--- a/staff/leslie-gutierrez/fullstack/zzz/app.2/test/retrieve-post.test.html
+++ b/staff/leslie-gutierrez/fullstack/zzz/app.2/test/retrieve-post.test.html
@@ -6,7 +6,7 @@
         }
     }
 
-    fetch('http://localhost:8000/users', req)
+    fetch('http://localhost:8000/posts', req)
         .then(res => {
             if (res.ok)
                 res.json()
