--- a/staff/leslie-gutierrez/fullstack/zzz/app.2/test/retrieve-user.test.html
+++ b/staff/leslie-gutierrez/fullstack/zzz/app.2/test/retrieve-user.test.html
@@ -1,8 +1,8 @@
 <script>
-    const req = {
-        method: 'GET',
-        headers: {
-            Authorization: 'Bearer 2eqjhn1o45no'
+    const req={
+        method:'GET', 
+        headers:{
+            Authorization: 'Bearer 4wwk0btpkly0'
         }
     }
 
