install vite and do first components #360

--- a/staff/isabel-dominguez/project/zzz/app.1/index.html
+++ b/staff/isabel-dominguez/project/zzz/app.1/index.html
@@ -4,30 +4,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Cosmetics</title>
+    <title>Maketics</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <header>
         <div class="container">
-            <h1>My Cosmetics</h1>
-            <nav>
-                <ul>
-                    <li><a href="#"><img src="icons8-heart-50.png"></a></li>
-                    <li><a href="#"><img src="icons8-cosmetic-64.png"></a></li>
-                    <li><a href="#"><img src="icons8-user-64.png"></a></li>
-                </ul>
-            </nav>
+            <h1>Maketics</h1>
+            <div class="search-container">
+                <input type="text" placeholder="Buscar...">
+                <button type="submit">Buscar</button>
+            </div>
         </div>
     </header>
 
-    <section id="hero">
-        <div class="container">
-            <h2>Bienvenido a nuestra tienda online</h2>
-            <p>Encuentra los mejores productos al mejor precio</p>
+    <section>
+        <div class="section2">
+            <h2>MATERIA PRIMA</h2>
+            <h2>ENVASES</h2>
+            <h2>UTENSILIOS</h2>
+            <h2 class="receta">RECETAS</h2>
+            <nav>
+                <ul>
+                    <li><a href="#"><img src="images/icons8-heart-50.png"></a></li>
+                    <li><a href="#"><img src="images/icons8-cosmetic-64.png"></a></li>
+                    <li><a href="#"><img src="images/icons8-user-64.png"></a></li>
+                </ul>
+            </nav>
+        </div>
+    </section>
+
+    <section>
+        <div class="section1">
+            <h2 type="text">Encuentra los mejores productos al mejor precio</h2>
         </div>
     </section>
 
@@ -35,127 +48,127 @@
         <div class="container">
             <h2>Nuestros productos</h2>
             <div class="product">
-                <img src="producto1.png" alt="Producto 1">
+                <img src="images/producto1.png" alt="Producto 1">
                 <h3>Hidrolato de rosas</h3>
                 <p>Precio: 11,46 €</p>
                 <a href="#" class="btn">Agregar al carrito</a>
             </div>
             <div class="product">
-                <img src="producto2.png" alt="Producto 2">
+                <img src="images/producto2.png" alt="Producto 2">
                 <h3>Manteca de Karité</h3>
                 <p>Precio: 10,93 €</p>
                 <a href="#" class="btn">Agregar al carrito</a>
             </div>
             <div class="product">
-                <img src="producto3.png" alt="Producto 2">
+                <img src="images/producto3.png" alt="Producto 2">
                 <h3>Aceite de rosa mosqueta virgen</h3>
                 <p>Precio: 13,69 €</p>
                 <a href="#" class="btn">Agregar al carrito</a>
             </div>
             <div class="product">
-                <img src="producto1.png" alt="Producto 1">
+                <img src="images/producto1.png" alt="Producto 1">
                 <h3>Hidrolato de rosas</h3>
                 <p>Precio: 11,46 €</p>
                 <a href="#" class="btn">Agregar al carrito</a>
             </div>
             <div class="product">
-                <img src="producto2.png" alt="Producto 2">
+                <img src="images/producto2.png" alt="Producto 2">
                 <h3>Manteca de Karité</h3>
                 <p>Precio: 10,93 €</p>
                 <a href="#" class="btn">Agregar al carrito</a>
             </div>
             <div class="product">
-                <img src="producto3.png" alt="Producto 2">
+                <img src="images/producto3.png" alt="Producto 2">
                 <h3>Aceite de rosa mosqueta virgen</h3>
                 <p>Precio: 13,69 €</p>
                 <a href="#" class="btn">Agregar al carrito</a>
             </div>
             <div class="product">
-                <img src="producto1.png" alt="Producto 1">
+                <img src="images/producto1.png" alt="Producto 1">
                 <h3>Hidrolato de rosas</h3>
                 <p>Precio: 11,46 €</p>
                 <a href="#" class="btn">Agregar al carrito</a>
             </div>
             <div class="product">
-                <img src="producto2.png" alt="Producto 2">
+                <img src="images/producto2.png" alt="Producto 2">
                 <h3>Manteca de Karité</h3>
                 <p>Precio: 10,93 €</p>
                 <a href="#" class="btn">Agregar al carrito</a>
             </div>
             <div class="product">
-                <img src="producto3.png" alt="Producto 2">
+                <img src="images/producto3.png" alt="Producto 2">
                 <h3>Aceite de rosa mosqueta virgen</h3>
                 <p>Precio: 13,69 €</p>
                 <a href="#" class="btn">Agregar al carrito</a>
             </div>
             <div class="product">
-                <img src="producto1.png" alt="Producto 1">
+                <img src="images/producto1.png" alt="Producto 1">
                 <h3>Hidrolato de rosas</h3>
                 <p>Precio: 11,46 €</p>
                 <a href="#" class="btn">Agregar al carrito</a>
             </div>
             <div class="product">
-                <img src="producto2.png" alt="Producto 2">
+                <img src="images/producto2.png" alt="Producto 2">
                 <h3>Manteca de Karité</h3>
                 <p>Precio: 10,93 €</p>
                 <a href="#" class="btn">Agregar al carrito</a>
             </div>
             <div class="product">
-                <img src="producto3.png" alt="Producto 2">
+                <img src="images/producto3.png" alt="Producto 2">
                 <h3>Aceite de rosa mosqueta virgen</h3>
                 <p>Precio: 13,69 €</p>
                 <a href="#" class="btn">Agregar al carrito</a>
             </div>
             <div class="product">
-                <img src="producto1.png" alt="Producto 1">
+                <img src="images/producto1.png" alt="Producto 1">
                 <h3>Hidrolato de rosas</h3>
                 <p>Precio: 11,46 €</p>
                 <a href="#" class="btn">Agregar al carrito</a>
             </div>
             <div class="product">
-                <img src="producto2.png" alt="Producto 2">
+                <img src="images/producto2.png" alt="Producto 2">
                 <h3>Manteca de Karité</h3>
                 <p>Precio: 10,93 €</p>
                 <a href="#" class="btn">Agregar al carrito</a>
             </div>
             <div class="product">
-                <img src="producto3.png" alt="Producto 2">
+                <img src="images/producto3.png" alt="Producto 2">
                 <h3>Aceite de rosa mosqueta virgen</h3>
                 <p>Precio: 13,69 €</p>
                 <a href="#" class="btn">Agregar al carrito</a>
             </div>
             <div class="product">
-                <img src="producto1.png" alt="Producto 1">
+                <img src="images/producto1.png" alt="Producto 1">
                 <h3>Hidrolato de rosas</h3>
                 <p>Precio: 11,46 €</p>
                 <a href="#" class="btn">Agregar al carrito</a>
             </div>
             <div class="product">
-                <img src="producto2.png" alt="Producto 2">
+                <img src="images/producto2.png" alt="Producto 2">
                 <h3>Manteca de Karité</h3>
                 <p>Precio: 10,93 €</p>
                 <a href="#" class="btn">Agregar al carrito</a>
             </div>
             <div class="product">
-                <img src="producto3.png" alt="Producto 2">
+                <img src="images/producto3.png" alt="Producto 2">
                 <h3>Aceite de rosa mosqueta virgen</h3>
                 <p>Precio: 13,69 €</p>
                 <a href="#" class="btn">Agregar al carrito</a>
             </div>
             <div class="product">
-                <img src="producto1.png" alt="Producto 1">
+                <img src="images/producto1.png" alt="Producto 1">
                 <h3>Hidrolato de rosas</h3>
                 <p>Precio: 11,46 €</p>
                 <a href="#" class="btn">Agregar al carrito</a>
             </div>
             <div class="product">
-                <img src="producto2.png" alt="Producto 2">
+                <img src="images/producto2.png" alt="Producto 2">
                 <h3>Manteca de Karité</h3>
                 <p>Precio: 10,93 €</p>
                 <a href="#" class="btn">Agregar al carrito</a>
             </div>
             <div class="product">
-                <img src="producto3.png" alt="Producto 2">
+                <img src="images/producto3.png" alt="Producto 2">
                 <h3>Aceite de rosa mosqueta virgen</h3>
                 <p>Precio: 13,69 €</p>
                 <a href="#" class="btn">Agregar al carrito</a>
