--- a/staff/abel-prieto/PROYECT/HiInit/index.html
+++ b/staff/abel-prieto/PROYECT/HiInit/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/png" href="/assets/terminal.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>HiInit Web | Home</title>
+  <title>HiInit Web | Terminal </title>
 </head>
 
 <body>
