--- a/staff/isabel-dominguez/project/app.11/index.html
+++ b/staff/isabel-dominguez/project/app.11/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/icon" href="./public/icons8-m-48.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Maketics Shop</title>
+  <title>Maketics</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
 </head>
