implement aaudio components and logics #454

--- a/staff/tano-aleu/project/z-metronome-demos/WebAudioContext(Babysteps)/synqple/FINAL.synqple.tonejs.metro-D&M-samp.html
+++ b/staff/tano-aleu/project/z-metronome-demos/WebAudioContext(Babysteps)/synqple/FINAL.synqple.tonejs.metro-D&M-samp.html
@@ -153,7 +153,7 @@
 
             // Crear metrónomo y samples
             const metronome =
-                new Metronomo("../audio/metronome/Metronomo8beats.wav", 120, metronomeVolume, 'muteMetronome');
+                new Metronomo("https://samples.s3.eu-central-1.amazonaws.com/metronome/Metronomo8beats.wav", 120, metronomeVolume, 'muteMetronome');
 
             const drumSamples = [
                 new DrumSample("../audio/Drum1.8.wav", 120, samplesVolume, 'muteDrumSample1'),
