--- a/staff/tano-aleu/project/app/index.html
+++ b/staff/tano-aleu/project/app/index.html
@@ -2,6 +2,27 @@
 <html lang="en">
 
 <head>
+  <!-- HTML Meta Tags -->
+  <title>SYNQPLE APP</title>
+  <meta name="description" content="">
+
+  <!-- Facebook Meta Tags -->
+  <meta property="og:url" content="https://synqpleappbeta.netlify.app">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="SYNQPLE APP">
+  <meta property="og:description" content="https://i.postimg.cc/gJdStPdk/synqple-og-sm.png">
+  <meta property="og:image" content="https://i.postimg.cc/gJdStPdk/synqple-og-sm.png">
+
+  <!-- Twitter Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta property="twitter:domain" content="synqpleappbeta.netlify.app">
+  <meta property="twitter:url" content="https://synqpleappbeta.netlify.app">
+  <meta name="twitter:title" content="SYNQPLE APP">
+  <meta name="twitter:description" content="https://i.postimg.cc/gJdStPdk/synqple-og-sm.png">
+  <meta name="twitter:image" content="https://i.postimg.cc/gJdStPdk/synqple-og-sm.png">
+
+  <!-- Meta Tags Generated via https://www.opengraph.xyz -->
+
   <meta charset="UTF-8" />
   <link rel="icon" type="image/x-icon" href="/public/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
