--- a/staff/tano-aleu/project/app/index.html
+++ b/staff/tano-aleu/project/app/index.html
@@ -4,22 +4,22 @@
 <head>
   <!-- HTML Meta Tags -->
   <title>SYNQPLE APP</title>
-  <meta name="description" content="">
+  <meta name="description" content="Synchronize your music never was so simple!">
 
   <!-- Facebook Meta Tags -->
   <meta property="og:url" content="https://synqpleappbeta.netlify.app">
   <meta property="og:type" content="website">
   <meta property="og:title" content="SYNQPLE APP">
-  <meta property="og:description" content="https://i.postimg.cc/gJdStPdk/synqple-og-sm.png">
-  <meta property="og:image" content="https://i.postimg.cc/gJdStPdk/synqple-og-sm.png">
+  <meta property="og:description" content="https://i.postimg.cc/3xzXdVZB/Mesa-de-trabajo-1.png">
+  <meta property="og:image" content="https://i.postimg.cc/3xzXdVZB/Mesa-de-trabajo-1.png">
 
   <!-- Twitter Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
   <meta property="twitter:domain" content="synqpleappbeta.netlify.app">
   <meta property="twitter:url" content="https://synqpleappbeta.netlify.app">
   <meta name="twitter:title" content="SYNQPLE APP">
-  <meta name="twitter:description" content="https://i.postimg.cc/gJdStPdk/synqple-og-sm.png">
-  <meta name="twitter:image" content="https://i.postimg.cc/gJdStPdk/synqple-og-sm.png">
+  <meta name="twitter:description" content="https://i.postimg.cc/3xzXdVZB/Mesa-de-trabajo-1.png">
+  <meta name="twitter:image" content="https://i.postimg.cc/3xzXdVZB/Mesa-de-trabajo-1.png">
 
   <!-- Meta Tags Generated via https://www.opengraph.xyz -->
 
