netlify setup and favicons

--- a/staff/tano-aleu/project/app/index.html
+++ b/staff/tano-aleu/project/app/index.html
@@ -10,7 +10,7 @@
   <meta property="og:url" content="https://synqpleappbeta.netlify.app">
   <meta property="og:type" content="website">
   <meta property="og:title" content="SYNQPLE APP">
-  <meta property="og:description" content="https://i.postimg.cc/3xzXdVZB/Mesa-de-trabajo-1.png">
+  <meta property="og:description" content="Synchronize your music never was so simple!">
   <meta property="og:image" content="https://i.postimg.cc/3xzXdVZB/Mesa-de-trabajo-1.png">
 
   <!-- Twitter Meta Tags -->
@@ -18,7 +18,7 @@
   <meta property="twitter:domain" content="synqpleappbeta.netlify.app">
   <meta property="twitter:url" content="https://synqpleappbeta.netlify.app">
   <meta name="twitter:title" content="SYNQPLE APP">
-  <meta name="twitter:description" content="https://i.postimg.cc/3xzXdVZB/Mesa-de-trabajo-1.png">
+  <meta name="twitter:description" content="Synchronize your music never was so simple!">
   <meta name="twitter:image" content="https://i.postimg.cc/3xzXdVZB/Mesa-de-trabajo-1.png">
 
   <!-- Meta Tags Generated via https://www.opengraph.xyz -->
