--- a/staff/judy-grayland/project/app/index.html
+++ b/staff/judy-grayland/project/app/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/icon" href="/people.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
+    <link rel="stylesheet" href="https://unpkg.com/mvp.css" />
   </head>
   <body>
     <div id="root"></div>
