--- a/staff/belen-ivars/project/app/index.html
+++ b/staff/belen-ivars/project/app/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/png+xml" href="/borrello-berlem.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="sylesheet" href="index.css" />
   <title>Basic Pantry 🥣</title>
 </head>
 
